--- a/git-commit-extension/manifest.json
+++ b/git-commit-extension/manifest.json
@@ -11,7 +11,10 @@
    "content_scripts": [ ],
    "description": "Git Commit",
    "icons": {
-      "32": "icon32.png"
+      "16": "icon32.png",
+      "32": "icon32.png",
+      "48": "icon32.png",
+      "128": "icon32.png"
    },
    "manifest_version": 2,
    "name": "Git Commit",
