--- a/git-commit-extension/manifest.json
+++ b/git-commit-extension/manifest.json
@@ -1,8 +1,4 @@
 {
-   "background": {
-      "persistent": false,
-      "scripts": [ "background.js" ]
-   },
    "browser_action": {
       "default_icon": "icon32.png",
       "default_popup": "index.html",
@@ -18,7 +14,7 @@
    },
    "manifest_version": 2,
    "name": "Git Commit",
-   "permissions": [ "tabs", "storage", "clipboardRead", "clipboardWrite", ",https://*/*", "http://*/*" ],
+   "permissions": [],
    "version": "0.1.0",
    "web_accessible_resources": []
 }
