--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "localforage": "^1.10.0",
     "pinia": "^2.0.28",
     "tdesign-vue-next": "^1.0.6",
     "vue": "^3.2.45"
