--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@vue/eslint-config-typescript": "^11.0.0",
     "@vue/test-utils": "^2.2.6",
     "@vue/tsconfig": "^0.1.3",
+    "del": "^7.0.0",
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
     "jsdom": "^20.0.3",
@@ -39,6 +40,8 @@
     "prettier": "^2.7.1",
     "typescript": "~4.7.4",
     "vite": "^4.0.0",
+    "vite-plugin-static-copy": "^0.13.1",
+    "vite-plugin-zip-pack": "^1.0.5",
     "vitest": "^0.25.6",
     "vue-cli-plugin-style-resources-loader": "^0.1.5",
     "vue-tsc": "^1.0.12"
