--- a/package.json
+++ b/package.json
@@ -45,5 +45,6 @@
     "vitest": "^0.25.6",
     "vue-cli-plugin-style-resources-loader": "^0.1.5",
     "vue-tsc": "^1.0.12"
-  }
+  },
+  "type": "module"
 }
